--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .bg {
       position: fixed;
       inset: 0;
-      background-image: url('single_tile.png');
+      background-image: url('https://files.catbox.moe/ccft84.png');
       background-repeat: repeat;
       background-position: 0 0;
       background-size: auto;
